weather/css/small.css
@import url('https://fonts.googleapis.com/css2?family=Akshar&family=Work+Sans:wght@600&display=swap');

body {
    font-family: "Akshar", Arial, Helvetica;
    font-size: 1.2em;
}

#announcement {
    display: none;
    background: #EC4E20;
}
#announcement p {
    margin: 0;
    padding: 20px;
    color: white;
    text-align: center;
}

h1, h2, h3, h4 {
    font-family: 'Work Sans', sans-serif;
    margin: 5px;
}

h4 {
    margin: 0px;
}

.title h1 {
    font-size: 1.8em;
}

.title h2 {
    font-size: 1.2em;
}

.title {
    margin:  30px 10px;
    text-align: left;
}

header {
    display: grid;
    grid-template-columns: 120px 1fr;
    min-width: 400px;
    margin: 0 auto;
    background-color: #3066BE;
    text-align: center;
    color: #fff;
}

.logo-box img{
    padding: 20px;
    width: 100px;
    height: 100px;
}

nav {
    background-color: #FCF7F8;
    width: 100%;
    grid-column: 1/-1;
    border-bottom: 2px solid #CED3DC;
}

.menu {
    list-style: none;
    padding: 0;
    margin: 0 auto;
}

.menu li:first-child {
    display: block
}

.menu li {
   display: none;
}

.menu a {
    display: block;
    padding: 0.75rem;
    text-align: center;
    text-decoration: none;
    color: black;
    font-weight: 700;
    transition: 0.5s;
    font-size: clamp(1rem, 2vmin, 1.5rem);
}

.menu a:hover {
    background-color: #CED3DC;
}

.active {
    color: #EC4E20 !important;
    text-decoration: underline !important;
}

.responsive li {
    display: block;
}

main {
    background-color: #CED3DC;
    padding: 1px;
}

.banner {
    position: relative;
}

.hero {
    width: 100%;
    padding: 0;
}

.summary {
    display: grid;
    grid-template-columns: 1fr 1fr;
    background: #ABA9C3;
    padding: 10px;
}

.summary h3 {
    grid-column: 1/3;
    text-align: center;
    text-decoration: underline;
}

#todayimg, #description {
    align-self: center;
}

#todayimg {
    justify-self: left;
}

#description {
    justify-self: right;
}

.labels, .values {
    list-style-type: none;
    padding: 5px 10px;
    margin: 0;
}

.labels {
    justify-self: right;
    text-align: right;
}

.values {
    justify-self: left;
    color: #EC4E20;
}

.forcast {
    text-align: center;
}

.flex {
    display: flex;
    align-items: center;
    justify-content: center;;
}

.five-days {
    background-color: #FCF7F8;
    text-align: center;
    justify-content: center;;
    min-width: 90px;
    border: 1px solid #000;
}



.weekday {
    background: #3066BE;
    color: #fff;
    padding: 5px 10px;
}

.left {
    background-color: #FCF7F8;
    padding: 15px;
    margin: 20px;
    border-radius: 10px;
    text-align: center;
}
.left h2 {
    text-decoration: underline;
    color: #EC4E20 
  }

footer {
    min-width: 400px;
    margin: 0 auto;
    background-color: #3066BE;
    text-align: center;
}

footer p {
    margin: 5px;
    font-size: 0.8em;
}

footer a {
    color: #EC4E20;
}

.info {
    max-width: 400px;
    margin: auto;
    padding: 5px;
    color: white;
}

.contact ul {
    list-style-type: none;
    text-align: left;
    padding: 0;
}

.contact p {
    font-size: 1em;
    text-align: left;
}

.bar {
    background-color: #FCF7F8;
    width: 100%;
    margin: 0;
}

.content-grid {
    margin: auto;
    padding: 20px 0;
    max-width: 600px;
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 1em;
    justify-items: center;
    
  }
  
  .gallery {
    background-color: #FCF7F8;
    padding: 10px;
    margin: 5px;
    text-align: center;
    border-radius: 10px;
  }
  
  .gallery img[data-src] {
    filter: blur(0.2em)
  }

  .gallery img {
    border-radius: 5px;
    filter: blur(0em);
    transition: filter 3.0s;
  }

 

